# wildwoodblog-rust

./: Cargo.toml
markdown/: 2021-7-29-windows11.markdown  test-.markdown  test.markdown  wild-memo-2019-10-2.markdown  wild-memo-2019-9-9.markdown  wild-memo-2020-11-11.markdown  wild-memo-2020-2-11.markdown  wild-memo-2021-6-9.markdown  wild-memo-2021-7-5.markdown
public/: manifest.webmanifest  sw.js
public/js/: highlight.min.js
public/source/: html.text  markdown.text
public/styles/: main.css  markdown.css
src/: main.rs
src/errors/: mod.rs
src/handlers/: blog.rs  mod.rs  series.rs
src/parsers/: markdown.rs  meta.rs  mod.rs  parsers.rs
templates/: blog.html  blog_index.html  index.html  series.html  series_index.html
templates/includes/: navbar.html
templates/partials/: head.html
